--- a/ObjectPersistenceAndSerialization/nbproject/project.properties
+++ b/ObjectPersistenceAndSerialization/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ObjectPersistenceAndSerialization
-main.class=Praktikum2.Praktikum2
+main.class=Tugas.FrontEnd
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
